@@ -466,6 +466,21 @@ rpmRC rpmtsFindPubkey(rpmts ts)
 /*@=exportlocal@*/
 
 /** \ingroup rpmts
+ * Import public key packet(s).
+ * @todo Implicit --update policy for gpg-pubkey headers.
+ * @param ts            transaction set
+ * @param pkt           pgp pubkey packet(s)
+ * @param pktlen        pgp pubkey length
+ * @return              RPMRC_OK/RPMRC_FAIL
+ */
+rpmRC rpmtsImportPubkey(rpmts ts,
+		const unsigned char * pkt, ssize_t pktlen)
+	/*@globals RPMVERSION, rpmGlobalMacroContext, h_errno,
+		fileSystem, internalState @*/
+        /*@modifies ts, rpmGlobalMacroContext,
+		fileSystem, internalState @*/;
+
+/** \ingroup rpmts
  * Close the database used by the transaction to solve dependencies.
  * @param ts		transaction set
  * @return		0 on success
